@@ -97,7 +97,8 @@ class UnsuccessfulPhoneCallTestCase(view_base.BrickTestCaseMixin,
             self.get_object_or_fail(Status, uuid=act_constants.UUID_STATUS_UNSUCCESSFUL),
             activity.status,
         )
-        self.assertEqual(act_constants.NARROW, activity.floating_type)
+        # self.assertEqual(act_constants.NARROW, activity.floating_type)
+        self.assertEqual(Activity.FloatingType.NARROW, activity.floating_type)
 
         end = activity.end
         self.assertDatetimesAlmostEqual(end, now())
